[gd_scene load_steps=27 format=3 uid="uid://u4oeqtd2cyye"]

[ext_resource type="Script" path="res://Scripts/Main Controller.gd" id="1_7imgs"]
[ext_resource type="PackedScene" uid="uid://5xiwvqroyk2d" path="res://Scenes/grid.tscn" id="2_8duao"]
[ext_resource type="Script" path="res://Scripts/InitManager.gd" id="3_m2yok"]
[ext_resource type="PackedScene" uid="uid://en47igj175g3" path="res://Scenes/ally.tscn" id="4_tt5vw"]
[ext_resource type="PackedScene" uid="uid://dkfp0y46rm1jd" path="res://Scenes/enemy.tscn" id="5_4smxl"]
[ext_resource type="SpriteFrames" uid="uid://fy8e8wgvo05l" path="res://Scenes/Sprite Frames/Triss.tres" id="5_l4uwr"]
[ext_resource type="Script" path="res://Scripts/jeff.gd" id="6_cdygi"]
[ext_resource type="Script" path="res://Scripts/CombatManager.gd" id="8_3eshf"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="9_qg5lv"]
[ext_resource type="Script" path="res://Scripts/Ability1Button.gd" id="10_fxut6"]
[ext_resource type="Script" path="res://Scripts/Ability2Button.gd" id="11_a6atw"]
[ext_resource type="Texture2D" uid="uid://baj87vuw4htut" path="res://Assets/Sprites/Allies/Atlus/Atlus_Base_Still.png" id="11_um6k4"]
[ext_resource type="Script" path="res://Scripts/Ability3Button.gd" id="12_v0gh6"]
[ext_resource type="Texture2D" uid="uid://bofj7xwd6mfhg" path="res://Assets/Maps_Tiles/tutorial_map.png" id="13_pfrlb"]
[ext_resource type="Texture2D" uid="uid://cxhgdv3ubm0ks" path="res://Assets/Maps_Tiles/fountain.png" id="14_fai0c"]
[ext_resource type="Texture2D" uid="uid://drsv20o13l0qq" path="res://Assets/Grid.png" id="14_lspid"]
[ext_resource type="Script" path="res://Scenes/Camera2D.gd" id="14_yc3dj"]

[sub_resource type="InputEventKey" id="InputEventKey_gei7j"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_11fnr"]
events = [SubResource("InputEventKey_gei7j")]

[sub_resource type="InputEventKey" id="InputEventKey_ps161"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_wweb6"]
events = [SubResource("InputEventKey_ps161")]

[sub_resource type="InputEventKey" id="InputEventKey_n7owk"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_1reh3"]
events = [SubResource("InputEventKey_n7owk")]

[sub_resource type="LabelSettings" id="LabelSettings_4gjyx"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_s1hfu"]
font_size = 26

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_46uv7"]
size = Vector2(645, 640)

[node name="Main_Controller" type="Node2D"]
script = ExtResource("1_7imgs")

[node name="Grid" parent="." instance=ExtResource("2_8duao")]
visible = false
layer_0/tile_data = PackedInt32Array(0, 0, 6, 65536, 0, 6, 131072, 0, 6, 196608, 0, 6, 262144, 0, 6, 327680, 0, 6, 393216, 0, 6, 458752, 0, 6, 524288, 0, 6, 589824, 0, 6, 655360, 0, 6, 1, 0, 6, 65537, 0, 3, 131073, 0, 3, 196609, 0, 3, 262145, 0, 3, 327681, 0, 3, 393217, 0, 3, 458753, 0, 3, 524289, 0, 3, 589825, 0, 3, 655361, 0, 3, 2, 0, 6, 65538, 0, 3, 131074, 0, 3, 196610, 0, 3, 262146, 0, 3, 327682, 0, 3, 393218, 0, 3, 458754, 0, 3, 524290, 0, 3, 589826, 0, 3, 655362, 0, 3, 3, 0, 6, 65539, 0, 3, 131075, 0, 3, 196611, 0, 3, 262147, 0, 3, 327683, 0, 3, 524291, 0, 3, 589827, 0, 3, 655363, 0, 3, 4, 0, 6, 65540, 0, 3, 196612, 0, 3, 262148, 0, 6, 327684, 0, 6, 393220, 0, 6, 458756, 0, 6, 524292, 0, 3, 589828, 0, 3, 655364, 0, 3, 5, 0, 6, 65541, 0, 3, 196613, 0, 3, 262149, 0, 6, 327685, 0, 6, 393221, 0, 6, 458757, 0, 6, 524293, 0, 3, 589829, 0, 3, 655365, 0, 3, 6, 0, 6, 65542, 0, 3, 131078, 0, 3, 196614, 0, 3, 262150, 0, 6, 327686, 0, 6, 393222, 0, 6, 458758, 0, 6, 524294, 0, 3, 589830, 0, 3, 655366, 0, 3, 7, 0, 6, 65543, 0, 3, 131079, 0, 3, 196615, 0, 3, 393223, 0, 6, 458759, 0, 6, 524295, 0, 3, 589831, 0, 3, 655367, 0, 3, 8, 0, 6, 65544, 0, 3, 131080, 0, 3, 196616, 0, 3, 393224, 0, 3, 458760, 0, 3, 524296, 0, 3, 589832, 0, 3, 655368, 0, 3, 9, 0, 6, 65545, 0, 3, 131081, 0, 3, 196617, 0, 3, 262153, 0, 3, 327689, 0, 3, 393225, 0, 3, 458761, 0, 3, 524297, 0, 3, 589833, 0, 3, 655369, 0, 3, 10, 0, 6, 65546, 0, 3, 131082, 0, 3, 196618, 0, 3, 262154, 0, 3, 327690, 0, 3, 393226, 0, 3, 458762, 0, 3, 524298, 0, 3, 589834, 0, 3, 655370, 0, 3, 720896, 0, 6, 720897, 0, 6, 720898, 0, 6, 720899, 0, 6, 720900, 0, 6, 720901, 0, 6, 720902, 0, 6, 720903, 0, 6, 720904, 0, 6, 720905, 0, 6, 720906, 0, 6, 11, 0, 6, 65547, 0, 6, 131083, 0, 6, 196619, 0, 6, 262155, 0, 6, 327691, 0, 6, 393227, 0, 6, 458763, 0, 6, 524299, 0, 6, 589835, 0, 6, 655371, 0, 6, 720907, 0, 6, 393219, 0, 3, 458755, 0, 3, 131076, 0, 3, 131077, 0, 3, 262152, 0, 3, 327688, 0, 3, 327687, 0, 6, 262151, 0, 6)

[node name="InitManager" type="Node" parent="Grid"]
script = ExtResource("3_m2yok")

[node name="UnitManager" type="Node" parent="Grid/InitManager"]

[node name="Atlus" parent="Grid/InitManager/UnitManager" instance=ExtResource("4_tt5vw")]
z_index = 1
position = Vector2(160, 416)
scale = Vector2(1, 1)
Name = "Atlus"
fileName = "Atlus"
MaxHP = 12
CurrentHP = 12
MaxAP = 8
CurrentAP = 8
TrueInit = 10
CurrentInit = 10
SetAbility2 = "Grapple"
SetAbility3 = "Throw"
Faction = 0

[node name="Triss" parent="Grid/InitManager/UnitManager" instance=ExtResource("4_tt5vw")]
position = Vector2(160, 288)
scale = Vector2(1, 1)
Name = "Triss"
fileName = "Triss"
MaxHP = 8
CurrentHP = 8
MaxAP = 8
CurrentAP = 8
TrueInit = 20
CurrentInit = 5
Faction = 0

[node name="AnimatedSprite2D" parent="Grid/InitManager/UnitManager/Triss" index="1"]
sprite_frames = ExtResource("5_l4uwr")

[node name="Robo Poly" parent="Grid/InitManager/UnitManager" instance=ExtResource("5_4smxl")]
position = Vector2(224, 416)
scale = Vector2(1, 1)
Name = "Robo Poly"
fileName = "Robopoly"
MaxHP = 3
CurrentHP = 3
MaxAP = 6
CurrentAP = 6
TrueInit = 28
CurrentInit = 7
Faction = 1

[node name="Robo Poly3" parent="Grid/InitManager/UnitManager" instance=ExtResource("5_4smxl")]
position = Vector2(480, 224)
scale = Vector2(1, 1)
Name = "Robo Poly"
fileName = "Robopoly"
MaxHP = 3
CurrentHP = 3
MaxAP = 6
CurrentAP = 6
TrueInit = 28
CurrentInit = 2
Faction = 1

[node name="Robo Poly2" parent="Grid/InitManager/UnitManager" instance=ExtResource("5_4smxl")]
position = Vector2(544, 544)
scale = Vector2(1, 1)
Name = "Robo Poly"
fileName = "Robopoly"
MaxHP = 3
CurrentHP = 3
MaxAP = 6
CurrentAP = 6
TrueInit = 28
Faction = 1

[node name="Jeff" parent="Grid/InitManager/UnitManager" instance=ExtResource("5_4smxl")]
visible = false
position = Vector2(384, -48)
script = ExtResource("6_cdygi")
Name = "Jeff"
fileName = "Jeff"
TrueInit = -100
CurrentInit = -100

[node name="CombatManager" type="Node" parent="Grid"]
script = ExtResource("8_3eshf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.498
anchor_right = 0.5
anchor_bottom = 0.498
offset_left = -864.0
offset_top = -484.056
offset_right = 864.0
offset_bottom = 483.944
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
shortcut_context = NodePath("InfoBox/AbilityBox")
script = ExtResource("9_qg5lv")

[node name="InfoBox" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -848.0
offset_top = 316.0
offset_right = -208.0
offset_bottom = 508.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.774753, 0.774753)
color = Color(0.141286, 0.351438, 0.842539, 1)

[node name="AbilityBox" type="HBoxContainer" parent="CanvasLayer/UI/InfoBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_top = 0.5
anchor_right = 0.499
anchor_bottom = 0.5
offset_left = 66.64
offset_top = -51.0
offset_right = 287.64
offset_bottom = 53.0
mouse_filter = 2

[node name="Ability1Button" type="Button" parent="CanvasLayer/UI/InfoBox/AbilityBox"]
layout_mode = 2
toggle_mode = true
shortcut = SubResource("Shortcut_11fnr")
text = "Ability 1"
script = ExtResource("10_fxut6")

[node name="Ability2Button" type="Button" parent="CanvasLayer/UI/InfoBox/AbilityBox"]
layout_mode = 2
toggle_mode = true
shortcut = SubResource("Shortcut_wweb6")
text = "Ability 2"
script = ExtResource("11_a6atw")

[node name="Ability3Button" type="Button" parent="CanvasLayer/UI/InfoBox/AbilityBox"]
layout_mode = 2
toggle_mode = true
shortcut = SubResource("Shortcut_1reh3")
text = "Ability 3"
script = ExtResource("12_v0gh6")

[node name="Name" type="Label" parent="CanvasLayer/UI/InfoBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.306612
anchor_top = 0.103959
anchor_right = 0.306612
anchor_bottom = 0.171667
offset_left = -0.0400085
offset_top = -19.96
offset_right = 199.96
offset_bottom = 20.04
text = "Atlus"
label_settings = SubResource("LabelSettings_4gjyx")
metadata/_edit_use_anchors_ = true

[node name="PortraitBox" type="ColorRect" parent="CanvasLayer/UI/InfoBox"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 182.0
offset_bottom = 180.0
color = Color(0.168627, 0.164706, 0.592157, 1)

[node name="PortraitSprite" type="Sprite2D" parent="CanvasLayer/UI/InfoBox/PortraitBox"]
texture_filter = 1
position = Vector2(84.5495, 84.5496)
scale = Vector2(5.01757, 5.01757)
texture = ExtResource("11_um6k4")

[node name="HPLabel" type="Label" parent="CanvasLayer/UI/InfoBox"]
layout_mode = 0
offset_left = 206.517
offset_top = 69.6998
offset_right = 249.517
offset_bottom = 108.7
text = "HP:"
label_settings = SubResource("LabelSettings_s1hfu")

[node name="HPValue" type="Label" parent="CanvasLayer/UI/InfoBox"]
layout_mode = 0
offset_left = 258.147
offset_top = 69.6998
offset_right = 317.147
offset_bottom = 108.7
text = "num"
label_settings = SubResource("LabelSettings_s1hfu")

[node name="APLabel" type="Label" parent="CanvasLayer/UI/InfoBox"]
layout_mode = 0
offset_left = 206.517
offset_top = 109.713
offset_right = 249.517
offset_bottom = 148.713
text = "AP:"
label_settings = SubResource("LabelSettings_s1hfu")

[node name="APValue" type="Label" parent="CanvasLayer/UI/InfoBox"]
layout_mode = 0
offset_left = 256.856
offset_top = 108.422
offset_right = 315.856
offset_bottom = 147.422
text = "num"
label_settings = SubResource("LabelSettings_s1hfu")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 313.0
offset_right = 848.0
offset_bottom = 465.0
color = Color(0.356863, 0.266667, 0.843137, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/ColorRect"]
layout_mode = 0
offset_right = 840.0
offset_bottom = 152.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(384, 384)
script = ExtResource("14_yc3dj")

[node name="TutorialMapSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(383.5, 388.5)
scale = Vector2(2.10742, 2.10742)
texture = ExtResource("13_pfrlb")
metadata/_edit_group_ = true

[node name="FountainSprite" type="Sprite2D" parent="TutorialMapSprite"]
z_index = 1
texture_filter = 1
texture = ExtResource("14_fai0c")

[node name="GridOverlayMask" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(384, 384)
texture = SubResource("PlaceholderTexture2D_46uv7")

[node name="GridOverlay" type="Sprite2D" parent="GridOverlayMask"]
texture_filter = 1
texture = ExtResource("14_lspid")

[editable path="Grid/InitManager/UnitManager/Atlus"]
[editable path="Grid/InitManager/UnitManager/Triss"]
[editable path="Grid/InitManager/UnitManager/Robo Poly"]
[editable path="Grid/InitManager/UnitManager/Robo Poly3"]
[editable path="Grid/InitManager/UnitManager/Robo Poly2"]
